--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-sudo: false
-language: ruby
-rvm:
- - 2.2
- - jruby
- - rbx-2
-# uncomment and edit the following line if your project needs to run something other than `rake`:
-# script: bundle exec rspec spec
+language: php
+php:
+- 5.5
+- 5.4
+- hhvm
+script: phpunit Test.php
