--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
  
 before_script:
   - composer self-update
-  - composer install --no-interaction --prefer-source –dev
+  - composer install --no-interaction --prefer-source --dev
  
 script:
   - ./vendor/bin/phpunit
